# diesel-pg-test

./: .gitignore  Cargo.toml  diesel.toml  diesel_schema.patch
migrations/2020-03-24-124500_indicators/: down.sql  up.sql
migrations/2020-03-26-105637_indicator_sets/: down.sql  up.sql
migrations/2020-04-05-173735_results/: down.sql  up.sql
src/: main.rs  params.rs  signal_generator.rs
src/database/: db_indicator.rs  db_indicator_set.rs  indicator.rs  mod.rs  result.rs  run.rs  schema.rs  schema.rs.rej
