[package]
name = "pg-test"
version = "0.1.0"
authors = ["Stefan Lendl <ste.lendl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "numeric", "chrono", "uuidv07"] }
dotenv = "0.15"

quick-xml = "0.17"
handlebars = "2.0"

chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_repr = "0.1"
serde_any = { version = "0.5", default-features = false, features = ["json", "yaml"] }

anyhow = "1.0"
log = "0.4"

diesel-derive-enum = { version = "0.4", features = ["postgres"] }
bigdecimal = { version ="0.1", features = ["serde"] }
uuid = { version = "0.8", default-features = false }

glob = "0.3"
rand = "0.7"
rand_distr = "0.2"
